# range_searcher

./: .markdownlint.yaml  .pre-commit-config.yaml  CMakeLists.txt  vcpkg.json
.github/workflows/: ci_tests.yml  pre-commit-check.yml  vcpkg-release.yml
examples/: CMakeLists.txt  basic_example.cpp  complex_example.cpp
include/beman/range_searcher/: CMakeLists.txt  config.hpp  config_generated.hpp.in  range_searcher.cppm  searcher.hpp
port/: portfile.cmake.in  vcpkg.json.in
tests/beman/range_searcher/: CMakeLists.txt  basic.test.cpp
